# FlightsKB

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  dev.sh  pyproject.toml  render.yaml
.github/workflows/: deploy-console.yml
Specs/: original-spec.md
Specs/001-flights-kb-playground/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Specs/001-flights-kb-playground/checklists/: requirements.md
Specs/001-flights-kb-playground/contracts/: openapi.yaml
Specs/002-kb-console/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Specs/002-kb-console/checklists/: requirements.md
Specs/002-kb-console/contracts/: openapi-ingest.yaml
console/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  index.css  main.tsx
console/src/components/: BreakdownTable.tsx  ConnectionDetails.tsx  ErrorBanner.tsx  (+10 more)
eval/: test_queries.yaml
knowledge/airlines/: ba-business-class.md  ingest-ced24ca0.md
knowledge/airports/: ingest-51e77d40.md  ingest-ca579e1a.md
knowledge/hacks/: booking-window-hack.md  ingest-748d197d.md
knowledge/inbox/: ingest-51e77d40.md  ingest-748d197d.md  ingest-ca579e1a.md  ingest-ced24ca0.md
knowledge/lounges/: lhr-t5-lounges.md
src/: __init__.py  cli.py
src/api/: __init__.py  app.py  routes.py
src/models/: __init__.py  chunk.py  document.py  query.py
src/services/: __init__.py  chunker.py  embeddings.py  eval.py  github.py  index.py  ingest.py
templates/: airline_premium_fare_template.md  hack_template.md
tests/: conftest.py
(+25 files in other folders)
